--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset = "utf-8">
+		<title>Editor</title>
+		<style>
+			#left-layout {
+				position:absolute;
+				top:0px;
+				left:0px;
+				width:20%;
+				height:140%;
+				background-color:indigo;
+			}
+			#right-layout {
+				position:absolute;
+				top:0px;
+				left:80%;
+				width:20%;
+				height:140%;
+				background-color:indigo;
+			}
+			#top-layout {
+				position:absolute;
+				top:0px;
+				left:0px;
+				width:100%;
+				height:10%;
+				background-color:indigo;
+			}
+			#text {
+				position:absolute;
+				top:4%;
+				left:45%;
+				color:white;
+				font-size:20;
+			}
+			#input {
+				position:absolute;
+				left:20%;
+				width:60%;
+				height:60%;
+				top:10%;
+				background-color:white;
+			}
+			#canvas {
+				position:absolute;
+				left:20%;
+				width:60%;
+				height:60%;
+				top:75%;
+			}
+		</style>
+	</head>
+	<body>
+		<div id = "left-layout"></div>
+		<div id = "right-layout"></div>
+		<div id = "top-layout">
+			<span id = "text"><p>Live Html Editor</p></span>
+		</div>
+		<div id = "middle">
+			<form id = "form">
+				<textarea rows = "99999" cols="80" id = "input"></textarea></br>
+			</form>
+			<div id = "canvas"></div>
+		</div>
+		
+		<script>
+			var input = document.getElementById("input")
+			var canvas = document.getElementById("canvas")
+			
+			input.addEventListener("change", function(){
+				var inputValue = input.value
+				canvas.innerHTML = inputValue
+				console.log(inputValue)
+			})
+		</script>
+	</body>
+</html>
